module/postponed/type_constructor/tests/inc/dynamic/types_many_no/many_too_many_params.rs
use type_constructor as the_module;
use the_module::prelude::*;

types!
{
  pub many Many : < T1, T2 >;
}

fn main()
{
}
